--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-MONGO_URI=mongodb+srv://usuario:contraseña@cluster.mongodb.net/authDB
+MONGO_URI=mongodb+srv://usuario:contraseña@cluster.mongodb.net/authDB?retryWrites=true&w=majority
 JWT_SECRET=mi_secreto_super_seguro
 PORT=5000
+const MONGO_URI = "mongodb+srv://USUARIO:CONTRASEÑA@cluster0.mongodb.net/NOMBRE_DB?retryWrites=true&w=majority";
